data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3031.wast
;; 10. **Randomized Target Indices**:     - Prepare a `br_table` with random indices generated at runtime and a broad range of targets.     - **Constraint**: Test the robustness of handling random, dynamic indices.     - **Edge Case**: Observes if dynamic elements cause any inconsistency in execution.  Each description addresses a unique edge case around `br_table`'s handling of indices and branching, specifically crafted to identify differential behaviors due to varying implementations of the `return` instruction between WebAssembly and the Wizard Engine.

(assert_invalid
  (module
    (func $type-value-empty-vs-num-in-br_table (result i32)
      (i32.const 0)
      (block (result i32)
        (br_table 0 1 2 (return) (i32.const 3))
      )
    )
  )
  "type mismatch"
)